# thallium-microservice-template

./: CMakeLists.txt  README.md  spack.yaml
.github/: initial-setup.py
.github/workflows/: codecov.yml  setup.yml  test.yml
examples/: CMakeLists.txt  bedrock-config.json  client.cpp  server.cpp
include/alpha/: Backend.hpp  BulkLocation.hpp  Client.hpp  Exception.hpp  Future.hpp  Provider.hpp  ResourceHandle.hpp  ResourceInterface.hpp  Result.hpp
python/: CMakeLists.txt  py-alpha-client.cpp  py-alpha-server.cpp
python/mochi/alpha/: client.py  server.py  test_resource_handle.py
src/: Admin.cpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  Provider.cpp  ProviderImpl.hpp  ResourceHandle.cpp  ResourceHandleImpl.hpp  alpha-config.cmake.in  alpha-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  ResourceTest.cpp  spack.yaml
